# Multimedia-sampling-and-quantization

./: README.md  TheorticalParts.txt
ImageDisplay_C++_cross_platform/: CMakeLists.txt
ImageDisplay_C++_cross_platform/dependency/wxWidgets/: CMakeLists.txt
ImageDisplay_C++_cross_platform/src/: Main.cpp
ImageDisplay_C++_windows/: Main.cpp  ReadMe.md
